# GamLoot

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  AGENTS.md  README.md  docker-compose.yml  justfile  opencode.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.opencode/: completion.md  instructions.md
design/: gam_product_requirements_document_prd.md
docs/: guild-trade-platform-mvp.md
rust/: Cargo.toml  clippy.toml  rustfmt.toml
rust/domain/core/: Cargo.toml
rust/domain/core/src/: lib.rs
rust/infrastructure/db/: Cargo.toml
rust/infrastructure/db/migrations/: 001_initial_schema.sql  002_multi_tenant_guild_mvp.sql  003_core_trade_accounting.sql  004_procurement_lottery.sql  005_disputes_moderation.sql  006_admin_action_confirmations.sql  007_admin_auth.sql  008_admin_actor_audit.sql
rust/infrastructure/db/src/: lib.rs
rust/infrastructure/redis/: Cargo.toml
rust/infrastructure/redis/src/: lib.rs
rust/services/cms-api/: Cargo.toml  Dockerfile
rust/services/cms-api/src/: main.rs
rust/services/user-api/: Cargo.toml  Dockerfile
rust/services/user-api/src/: main.rs
rust/workers/notification/: Cargo.toml  Dockerfile
rust/workers/notification/src/: main.rs
rust/workers/order/: Cargo.toml  Dockerfile
rust/workers/order/src/: main.rs
rust/workers/payment/: Cargo.toml  Dockerfile
rust/workers/payment/src/: main.rs
scripts/: smoke-admin-ux.mjs  smoke-appium-login.mjs  smoke-appium-user-app.mjs  smoke-multipage-ux.mjs  smoke-user-app-web.mjs  smoke-user-flow.mjs  smoke-user-web.mjs  validate-migrations.sh  wait-http.mjs
(+59 files in other folders)
