[workspace]
members = [
    "services/user-api",
    "services/cms-api",
    "workers/order",
    "workers/payment",
    "workers/notification",
    "domain/core",
    "infrastructure/db",
    "infrastructure/redis",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"